Updated composer.json typo

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "davidthorn/craft-plugin",
     "description": "A plugin for craft cms",
-    "homepage": "https://github.com:davidthorn/craft-plugin.git",
+    "homepage": "https://github.com/davidthorn/craft-plugin.git",
     "readme": "./README.md",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "type": "craft-plugin",
     "keywords": ["craft", "craftcms", "plugin", "cms", "formfields", "forms"],
     "require": {
